# karabingen

./: .goreleaser.yaml  README.md  go.mod  main.go  pyproject.toml
.github/workflows/: release.yaml
cmd/: bookmark_tmux.go  config.go  generate.go  root.go  rules.go  switch_safari.go  switch_tmux.go  types.go
exmaple/: config.yaml
karabingen/: cli.py
scripts/: tmuxjump.py  tmuxjump_alacrity_zsh.sh
