[project]
name = "karabingen"
version = "0.1.0"
description = "CLI tool to generate Karabiner configuration"
authors = [{ name = "fgazat", email = "fgazat@yandex.ru" }]
dependencies = ["pyyaml"]

[project.scripts]
karabingen = "karabingen.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["karabingen", "scripts"]

[tool.hatch.build.targets.wheel.force-include]
"scripts" = "scripts"

[tool.hatch.build.targets.sdist]
include = ["karabingen", "scripts"]
